# spm-transformer-rs

./: .gitignore  .harper-dictionary.txt  Cargo.toml  README.md  flake.nix  rustfmt.toml
.claude/: ARCHITECTURE.md  EXPERIMENTS.md  INSTRUCTIONS.md  ORIGINAL_ANALYSIS.md  PROGRESS.md  README.md  REFERENCE.md  TODOS.md
examples/: fft_test.rs
py/: explore_dataset.py  inspect.py  mat_to_npz.py
slurm/: build.nu  sweep.nu  train.nu
src/: data.rs  main.rs  model.rs  tokenizer.rs  training.rs  utils.rs
src/model/: mod.rs  sequential.rs  vit.rs
