[package]
name = "stm-transformer"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = []

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19.1", features = ["cuda", "train", "wgpu", "ndarray"] }
clap = { version = "4.5.53", features = ["derive"] }
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
plotly = "0.13.5"
rand = "0.9.2"
rustfft = "6.4.1"
